Error helper added. Login now works

--- a/static/partials/login_view.html
+++ b/static/partials/login_view.html
@@ -9,7 +9,7 @@
 				</div>
 				<div class="pure-control-group">
 					<label for="password">Password</label>
-					<input type="password">
+					<input type="password" ng-model="password">
 				</div>
 				<div class="pure-controls">
 					<a class="pure-button pure-button-primary" ng-click="submit()">Log in</a>
