--- a/static/partials/preferences_view.html
+++ b/static/partials/preferences_view.html
@@ -13,6 +13,7 @@
 	<div class="row">
 		<div class="eight columns offset-by-two">
 			<form ng-submit="submit()" id="prefs-form" class="pure-form pure-form-stacked">
+				<legend>Server Configuration</legend>
 				<div class="row">
 					<label for="interval-select">Download new articles every</label>
 						<select ng-options="i.value as i.label for i in intervalOptions" ng-model="refresh_rate" id="interval-select">
