Logout now works

--- a/static/partials/login_view.html
+++ b/static/partials/login_view.html
@@ -12,7 +12,7 @@
 					<input type="password" ng-model="password">
 				</div>
 				<div class="pure-controls">
-					<button type="submit" class="pure-button pure-button-primary" ng-click="submit()">Log in</button>
+					<button type="submit" class="pure-button pure-button-primary">Log in</button>
 					<p>First time here? <a href="/api/setup">Run the first–time setup.</a></p>
 				</div>
 			</fieldset>
