--- a/static/partials/preferences_view.html
+++ b/static/partials/preferences_view.html
@@ -5,7 +5,7 @@
 			<li><a href="#/subsciptions">Subscriptions</a></li>
 			<li class="pure-menu-selected"><a href="#/preferences">Preferences</a></li>
 			<li class="pure-menu-separator"></li>
-			<li><a ng-click="logout()" href="#">Log Out</a></li>
+			<li><a ng-click="logout()" href="">Log Out</a></li>
 		</ul>
 	</div>
 </div>
